Fix small clipping bug with mobile nav and menu button

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -37,13 +37,7 @@
   height: 100vh;
   width: 100%;
   background: rgba(0, 0, 0, 0.4);
-}
-
-.mobile_nav_menu_initial {
-  background: red;
-  animation-name: fadein_nav_menu;
-  animation-duration: 0ms;
-  animation-fill-mode: forwards;
+  z-index: 1;
 }
 
 .mobile_nav_menu_active {
